--- a/package.json
+++ b/package.json
@@ -47,8 +47,11 @@
     "webpack-dev-server": "^3.1.3"
   },
   "dependencies": {
+    "babel-plugin-emotion": "^9.1.2",
+    "emotion": "^9.1.2",
     "prop-types": "^15.6.1",
     "react": "^16.3.1",
-    "react-dom": "^16.3.1"
+    "react-dom": "^16.3.1",
+    "react-emotion": "^9.1.2"
   }
 }
