--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "babel-eslint": "^8.2.2",
     "babel-loader": "^7.1.4",
     "babel-plugin-transform-class-properties": "^6.24.1",
+    "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "babel-preset-env": "^1.6.1",
     "babel-preset-react": "^6.24.1",
     "css-loader": "^0.28.11",
@@ -50,6 +51,7 @@
     "babel-plugin-emotion": "^9.1.2",
     "emotion": "^9.1.2",
     "prop-types": "^15.6.1",
+    "rc-slider": "^8.6.1",
     "react": "^16.3.1",
     "react-dom": "^16.3.1",
     "react-emotion": "^9.1.2"
