--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "prop-types": "^15.6.1",
     "rc-slider": "^8.6.1",
     "react": "^16.3.2",
+    "react-dimensions": "^1.3.1",
     "react-dom": "^16.3.2",
     "react-emotion": "^9.1.3"
   }
