--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "babel-loader": "^7.1.4",
     "babel-plugin-emotion": "^9.1.2",
     "babel-plugin-transform-class-properties": "^6.24.1",
+    "babel-plugin-transform-decorators-legacy": "^1.3.4",
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "babel-preset-env": "^1.7.0",
     "babel-preset-react": "^6.24.1",
@@ -49,6 +50,8 @@
   },
   "dependencies": {
     "emotion": "^9.1.3",
+    "mobx": "^4.3.0",
+    "mobx-react": "^5.1.2",
     "prop-types": "^15.6.1",
     "rc-slider": "^8.6.1",
     "react": "^16.3.2",
