--- a/.eslintrc
+++ b/.eslintrc
@@ -3,5 +3,8 @@
     "browser": true
   },
   "extends": "airbnb",
-  "parser": "babel-eslint"
+  "parser": "babel-eslint",
+  "rules": {
+    "react/jsx-props-no-spreading": [0]
+  }
 }
