--- a/package.json
+++ b/package.json
@@ -4,10 +4,11 @@
   "description": "Compare different focal lengths on various sensors",
   "main": "index.js",
   "scripts": {
-    "dev": "webpack-dev-server --config ./webpack.config.js --mode development",
+    "dev": "webpack-dev-server --mode development",
     "build": "webpack --config ./webpack.config.js",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "lint": "eslint --ext .js,.jsx ./src"
+    "lint": "eslint --ext .js,.jsx ./src",
+    "lint:fix": "eslint --ext .js,.jsx ./src --fix"
   },
   "repository": {
     "type": "git",
@@ -25,38 +26,42 @@
   },
   "homepage": "https://github.com/RomanKol/focal-length#readme",
   "devDependencies": {
-    "autoprefixer": "^8.5.0",
+    "@babel/core": "^7.6.4",
+    "@babel/plugin-proposal-class-properties": "^7.5.5",
+    "@babel/plugin-proposal-decorators": "^7.6.0",
+    "@babel/plugin-proposal-object-rest-spread": "^7.6.2",
+    "@babel/plugin-transform-object-assign": "^7.2.0",
+    "@babel/preset-env": "^7.6.3",
+    "@babel/preset-react": "^7.6.3",
+    "@emotion/babel-preset-css-prop": "^10.0.23",
+    "autoprefixer": "^8.6.5",
     "babel-cli": "^6.26.0",
-    "babel-eslint": "^8.2.3",
-    "babel-loader": "^7.1.4",
-    "babel-plugin-emotion": "^9.1.2",
-    "babel-plugin-transform-class-properties": "^6.24.1",
-    "babel-plugin-transform-decorators-legacy": "^1.3.4",
-    "babel-plugin-transform-object-rest-spread": "^6.26.0",
-    "babel-preset-env": "^1.7.0",
-    "babel-preset-react": "^6.24.1",
-    "css-loader": "^0.28.11",
-    "eslint": "^4.19.1",
-    "eslint-config-airbnb": "^16.1.0",
-    "eslint-plugin-import": "^2.12.0",
-    "eslint-plugin-jsx-a11y": "^6.0.3",
-    "eslint-plugin-react": "^7.8.2",
-    "postcss-loader": "^2.1.5",
-    "react-hot-loader": "^4.2.0",
-    "style-loader": "^0.20.3",
-    "webpack": "^4.8.3",
-    "webpack-cli": "^2.1.4",
-    "webpack-dev-server": "^3.1.4"
+    "babel-eslint": "^10.0.3",
+    "babel-loader": "^8.0.6",
+    "clean-webpack-plugin": "^3.0.0",
+    "css-loader": "^3.2.0",
+    "eslint": "^6.6.0",
+    "eslint-config-airbnb": "^18.0.1",
+    "eslint-plugin-import": "^2.18.2",
+    "eslint-plugin-jsx-a11y": "^6.2.3",
+    "eslint-plugin-react": "^7.16.0",
+    "html-webpack-plugin": "^3.2.0",
+    "postcss-loader": "^3.0.0",
+    "style-loader": "^1.0.0",
+    "webpack": "^4.41.2",
+    "webpack-cli": "^3.3.10",
+    "webpack-dev-server": "^3.9.0"
   },
   "dependencies": {
-    "emotion": "^9.1.3",
-    "mobx": "^4.3.0",
-    "mobx-react": "^5.1.2",
-    "prop-types": "^15.6.1",
-    "rc-slider": "^8.6.1",
-    "react": "^16.4.0",
+    "@emotion/core": "^10.0.22",
+    "@emotion/styled": "^10.0.23",
+    "babel-preset-env": "^1.7.0",
+    "mobx": "^5.14.2",
+    "mobx-react": "^6.1.4",
+    "prop-types": "^15.7.2",
+    "rc-slider": "^8.7.1",
+    "react": "^16.11.0",
     "react-dimensions": "^1.3.1",
-    "react-dom": "^16.4.0",
-    "react-emotion": "^9.1.3"
+    "react-dom": "^16.11.0"
   }
 }
